# StochasTech

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  pixi.toml  pyproject.toml  sitemap.xml  zezwa_math_modeling.txt
.github/workflows/: ci.yml  docs.yml
STOCHASTECH_PIPELINE/: index.html
architecture/phase2-cpp/: index.html
architecture/repo-layout/: index.html
architecture/tech-stack/: index.html
cpp/: README.md  legacy_main.cpp
doc/: 01_overview.md  02_roadmap.md  03_scope.md  GUIDE.md  README.md
doc/architecture/: phase2_cpp.md  repo_layout.md  tech_stack.md
doc/math/: 00_index.md  01_brownian_motion.md  02_ito_calculus.md  03_gbm.md  04_heston.md  05_euler_maruyama.md  06_monte_carlo_var.md  07_adjoint_sde.md  08_calibration_losses.md  09_var_backtesting.md
doc/methods/: future_work.md  neural_sde.md
docs/: STOCHASTECH_PIPELINE.md  index.md  zezwa_pipeline.txt
docs/architecture/: phase2-cpp.md  repo-layout.md  tech-stack.md
docs/getting-started/: installation.md  overview.md  quickstart.md
docs/guide/: customization.md  pipeline.md  results.md  troubleshooting.md  (+1 more)
math/: index.html
paper/: command.txt  refs.bib  stochastech.tex
scripts/: extract_pdfs.py  grad_check.py  reproduce_figures.py  run_backtest.py  run_calibration.py
search/: search_index.json
stochastech/: .env.example
stylesheets/: extra.css
tests/: test_backtest.py  test_calibration_baselines.py  test_doc_parity.py  test_gbm.py  test_heston.py  test_heston_fit.py  test_loaders.py  test_losses.py  test_smoke.py  test_var.py  test_var_forecasts.py  test_viz.py
(+56 files in other folders)
