[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stochastech"
version = "0.0.1"
description = "Differentiable Heston-model calibrator with Monte Carlo VaR backtesting."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "torch>=2.2",
    "torchsde>=0.2.6",
    "numpy>=1.26",
    "scipy>=1.12",
    "pandas>=2.2",
    "yfinance>=0.2.40",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
]

[tool.hatch.build.targets.wheel]
packages = ["stochastech"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
